<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment2">




    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >


        <LinearLayout
            android:id="@+id/data_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/transparent_black"
            android:orientation="vertical"
            app:layout_constraintHeight_default="percent"

            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/pressure"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/pressure"
                android:textColor="@color/white"
                app:autoSizeTextType="uniform" />
            <TextView
                android:id="@+id/windDir"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:maxLines="1"

                android:text="@string/windDir"
                android:textColor="@color/white"
                app:autoSizeTextType="uniform" />
            <TextView
                android:id="@+id/windSpeed"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/windSpeed"
                android:textColor="@color/white"
                app:autoSizeTextType="uniform" />


            <TextView
                android:id="@+id/Humidity"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/Humidity"
                android:textColor="@color/white"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/Visibility"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/Visibility"
                android:textColor="@color/white"
                app:autoSizeTextType="uniform" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>