<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment3">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/col1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.02" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/col2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.52" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/col3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.77" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/col4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.98" />

        <LinearLayout
            android:id="@+id/firstcol"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/transparent_black"
            android:orientation="vertical"

            app:layout_constraintEnd_toEndOf="@id/col2"
            app:layout_constraintStart_toStartOf="@id/col1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">




            <TextView
                android:id="@+id/day1"
                android:text="@string/day1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                app:autoSizeTextType="uniform"
                android:gravity="center"/>

            <TextView
                android:id="@+id/day2"
                android:text="@string/day2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                app:autoSizeTextType="uniform"
                android:gravity="center"/>

            <TextView
                android:id="@+id/day3"
                android:text="@string/day3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                app:autoSizeTextType="uniform"
                android:gravity="center"/>

            <TextView
                android:id="@+id/day4"
                android:text="@string/day4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                app:autoSizeTextType="uniform"
                android:gravity="center"/>

            <TextView
                android:id="@+id/day5"
                android:text="@string/day5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                app:autoSizeTextType="uniform"
                android:gravity="center"/>




        </LinearLayout>


        <LinearLayout
            android:id="@+id/secCol"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/transparent_black"
            android:orientation="vertical"

            app:layout_constraintEnd_toEndOf="@id/col3"
            app:layout_constraintStart_toStartOf="@id/col2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">


            <ImageView
                android:id="@+id/weather1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                app:autoSizeTextType="uniform"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/weather2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                app:autoSizeTextType="uniform"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/weather3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                app:autoSizeTextType="uniform"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/weather4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                app:autoSizeTextType="uniform"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/weather5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                app:autoSizeTextType="uniform"
                android:gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/thirdCol"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/transparent_black"
            android:orientation="vertical"

            app:layout_constraintEnd_toEndOf="@id/col4"
            app:layout_constraintStart_toStartOf="@id/col3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">


            <TextView
                android:id="@+id/temp1"
                android:text="@string/temp1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                app:autoSizeTextType="uniform"
                android:gravity="center"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/temp2"
                android:text="@string/temp2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                app:autoSizeTextType="uniform"
                android:gravity="center"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/temp3"
                android:text="@string/temp3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                app:autoSizeTextType="uniform"
                android:gravity="center"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/temp4"
                android:text="@string/temp4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                app:autoSizeTextType="uniform"
                android:gravity="center"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/temp5"
                android:text="@string/temp5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                app:autoSizeTextType="uniform"
                android:gravity="center"
                android:maxLines="1"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>