<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonAdd"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/buttonRemove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRemove"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonRemove"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/buttonSelect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />
    <Button
        android:id="@+id/buttonSelect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonSelect"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/buttonRemove" />



    <TextView
        android:id="@+id/Description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Enter city name"
        app:autoSizeTextType="uniform"
        app:layout_constraintVertical_weight="0.4"
        app:layout_constraintBottom_toTopOf="@+id/cityInput"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cityInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="text"
        android:text="Krakow"
        app:autoSizeTextType="uniform"
        android:maxLines="1"
        android:maxLength="50"
        android:autoSizeTextType="uniform"
        app:layout_constraintVertical_weight="0.6"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description" />



    <TextView

        android:id ="@+id/selectedCity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Selected city: "
        app:autoSizeTextType="uniform"
        android:maxLines="1"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />
    <ListView
        android:id="@+id/citieslist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedCity" />


</androidx.constraintlayout.widget.ConstraintLayout>